# ai-voice

./: .env.example  .gitignore  README.md  ai-voice.md  main.py  pyproject.toml
input/examples/: announcement.ssml  customer_service.ssml  education_recursion.ssml  multilingual.ssml
src/: __init__.py  config.py  factory.py
src/providers/: __init__.py  azure_openai.py  azure_speech.py  base.py
